welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: value Length is not a member of Array[java.awt.Color]
		for(j <- 0 to colors.Length) {
                                     ^